Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135653

MessageReceived not fired when subscribing again to just unsubscribed topic

XMLWordPrintable

    • Linux/Yocto, Windows
    • c38308327 (dev), 71bc423d1 (6.10), c6a708a71 (6.9), 534ece0b0 (tqtc/lts-6.8)

      Unsubscribing a topic with QMqttClient and then directly subscribing it again, when using the QMqttSubscription classes returned by QMqttClient::subscribe.

      Example project attached.

      The slot onSubscription1 is never triggered
      The payload "trigger_subscription_1" is published correctly, as checked with "mosquitto_sub -h localhost -p 1883 -t Test".

        1. MqttSubRaceCondition.zip
          5 kB
          Tommi M. Tauriainen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            evenandersen Even Oscar Andersen
            tommimtauriainen Tommi M. Tauriainen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: